# goit-pycore-personal-assistant

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Temp_def/: def_clean_phone_and_email.py
src/bot/: book_manager.py
src/core/: book.py  decorators.py  fast_search_adapter.py  record.py  response_code.py  table_formatter.py  utilities.py
src/core/books/: __init__.py
src/core/books/contact/: __init__.py  contact_book.py  contact_record.py
src/core/books/note/: __init__.py  note_book.py  note_record.py
src/core/command_auto_complete/: README.md  __init__.py  command_auto_complete.py
src/core/fast_search_module/: README.md  __init__.py  decorators.py  fast_search.py  index_data.py
